<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a.kuflekapsle.MainActivity">

    <ImageView
        android:id="@+id/title_Image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/kufle"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        />
    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_Image"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barName"
            style="@style/barTitle"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/description"
            style="@style/infoDesc"
            android:gravity="center_vertical|center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_marker_24dp"
                style="@style/infoDesc"
                android:tint="@color/colorPrimary"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/address"
                style="@style/infoDesc"
                android:layout_gravity="end"
                android:gravity="center_vertical"/></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phone_24dp"
                style="@style/infoDesc"
                android:tint="@color/colorPrimary"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/phone"
                style="@style/infoDesc"
                android:layout_gravity="end"
                android:gravity="center_vertical"/></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_watch_24dp"
                style="@style/infoDesc"
                android:tint="@color/colorPrimary"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hours"
                style="@style/infoDesc"
                android:layout_gravity="end"
                android:gravity="center_vertical"/></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_web_24dp"
                style="@style/infoDesc"
                android:tint="@color/colorPrimary"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/domain"
                style="@style/infoDesc"
                android:layout_gravity="end"
                android:gravity="center_vertical"/></LinearLayout>
    </LinearLayout>

</RelativeLayout>
